# VKBot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  bootstrap.ps1  main.cpp
Network/: HttpSession.cpp  HttpSession.h  HttpSessionImpl.h  Manager.hpp  NetworkManager.cpp  NetworkManager.h  Request.hpp  boostNetwork.h
VK/API/: User.hpp  VKClient.hpp  VKLongPoll.hpp
VK/Objects/: VKObject.hpp  VKPhoto.hpp  VKUser.hpp
